# continuedfractions

./: .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.rst  SECURITY.md  codecov.yml  pyproject.toml  requirements.txt  requirements_test.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql-analysis.yml  python-app.yml
docs/: conf.py  index.rst  requirements.txt
docs/_static/: ksrm-tree-root-2-1-depth-2.dot  ksrm-tree-root-3-1-depth-2.dot  rationals-cantor-diagonalisation-transposed.dot  rationals-cantor-diagonalisation.dot  rationals-rectilinear-enumeration.dot  rationals-rectilinear-l2-enumeration.dot  rationals-rectilinear-transposed-enumeration.dot  rationals-reverse-l-enumeration.dot  rationals-reverse-l-transposed-enumeration.dot  rationals-reverse-l2-enumeration.dot
docs/_templates/: author.html
docs/sources/: api-reference.rst  continued-fractions.rst  contributing.rst  creating-continued-fractions.rst  exploring-continued-fractions.rst  getting-started.rst  installation.rst  mediants.rst  properties-of-continued-fractions.rst  rational-points.rst  sequences.rst
docs/sources/continuedfractions/: continuedfraction.rst  lib.rst  rational-orderings.rst  rational-points.rst  sequences.rst  utils.rst
src/continuedfractions/: continuedfraction.py  continuedfractions.py  lib.py  rational_orderings.py  rational_points.py  sequences.py  utils.py
tests/units/: test_continuedfraction.py  test_continuedfractions.py  test_lib.py  test_rational_points.py  test_sequences.py  test_utils.py
