[project]

# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/

# For the standard reference on Python packaging, including using
# ``pyproject.toml`` for build definition and configuration see:
#
#     https://packaging.python.org/en/latest/tutorials/packaging-projects/
#
name = "continuedfractions"
description = "Object-oriented continued fractions with Python."

authors = [
    {name = "S. R. Murthy", email = "s.murthy@tutanota.com"},
]

maintainers = [
  {name = "S. R. Murthy", email = "s.murthy@tutanota.com"}
]

dynamic = ["version"]

requires-python = ">=3.10"

license = {file = "LICENSE"}

dependencies = [
]

readme = "README.md"

keywords = [
    "computational number theory",
    "coprime integers",
    "continued fractions",
    "farey sequences",
    "irrational numbers",
    "mediants",
    "number theory",
    "rational approximation",
    "rational numbers",
    "real numbers",
]

classifiers = [
        "Environment :: Console",
        "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Development Status :: 5 - Production/Stable",
        "Operating System :: POSIX :: Linux",
        "Operating System :: MacOS",
        "Operating System :: Microsoft :: Windows",
]

[project.optional-dependencies]
user = [
    "jupyter",
]

[project.scripts]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.urls]
Homepage = "https://github.com/sr-murthy/continuedfractions"
Documentation = "https://continuedfractions.readthedocs.io/en/latest/"
Repository = "https://github.com/sr-murthy/continuedfractions"

# For working with PDM, including configuration and usage see:
#
#     https://pdm.fming.dev/latest/
#     https://pdm.fming.dev/latest/reference/pep621/
#     https://pdm.fming.dev/latest/reference/cli/
#
[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"
includes = [
    "src/continuedfractions",
]
# File patterns to exclude, the paths are relative to the project root.
excludes = [
    "docs",
    "build",
    "dist",
    "tests",
    ".pytest_cache",
    "*.pyc",
    "*.env",
    "*__pycache__*",
]
source-includes = [
    "LICENSE",
    "README.md",
]
editable-backend = "path"

[tool.pdm.dev-dependencies]
build = [
    "pip>=23.1.2",
]
dev = [
    "ipython",
    "ipdb",
    "virtualenv",
]
docs = [
    "myst-parser",
    "pydata-sphinx-theme",
    "Sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "pylint>=2.17.5",
    "nb2plots>=0.7.1",
    "sphinx-gallery>=0.14.0",
    "jupyter-sphinx>=0.4.0",
    "numpydoc>=1.5.0",
    "sphinx-design>=0.5.0",
]
lint = [
    "ruff",
]
test = [
    "coverage[toml]",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "sympy",
]
deploy = [
    "twine>=4.0.2",
]

[tool.pdm.scripts]

lint = {shell = "make lint", help = "Lint source with Ruff"}
doctests = {shell = "make doctests", help = "Run doctests"}
unittests = {shell = "make unittests", help = "Run unit tests & measure coverage"}

[tool.pdm.version]
source = "file"
path = "src/continuedfractions/version.py"

# For ``pytest`` configuration, including TOML-specific configuration see:
#
#     https://docs.pytest.org/en/7.3.x/reference/customize.html#configuration
#     https://docs.pytest.org/en/7.3.x/reference/customize.html#pyproject-toml
#

[tool.pytest.ini_options]
pythonpath = "src"
addopts = """\
    --cache-clear 
    --code-highlight=yes \
    --color=yes \
    --cov=src \
    --cov-config=pyproject.toml \
    --cov-report=xml \
    --cov-report=html \
    --dist worksteal \
    --numprocesses=auto \
    -ra \
    --tb=native \
    --verbosity=3\
"""
filterwarnings = [
    "ignore::DeprecationWarning"
]
python_files = ["test_*.py",]
python_classes = ["Test", "Acceptance",]
python_functions = ["test"]
testpaths = [
    "tests/",
]
markers = [
    # Test tags/labels/markers - not using any currently
]

# For ``coverage`` configuration see the reference from version ``7.4.1``:
#
#     https://coverage.readthedocs.io/en/7.4.1/config.html
#
[tool.coverage.run]
branch = true
omit = [
    "./build",
    "./dist",
    "./docs",
    "*/tests*",
    ".pytest_cache",
    "*.pyc",
    "*.env",
    "*__pycache__*",
    "version.py"
]
source = ["src"]

[tool.coverage.report]
precision = 3
show_missing = true
skip_covered = true
skip_empty = true
sort = "Name"
